ingress/apisix-dashboard-deployment-patch.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: apisix-dashboard
  namespace: ingress-apisix
spec:
  template:
    spec:
      volumes:
        - name: ssl
          secret:
            secretName: etcd
            defaultMode: 420
        - name: etcd-ssl
          secret:
            secretName: etcd
            defaultMode: 420
      containers:
        - name: dashboard
          volumeMounts:
            - name: ssl
              mountPath: /usr/local/apisix/conf/ssl/ca.crt
              subPath: ca.crt
            - name: etcd-ssl
              mountPath: /etcd-ssl
