ingress/apisix-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apisix-admin-headless
  namespace: ingress-apisix
  labels:
    app.kubernetes.io/instance: apisix
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: apisix
    app.kubernetes.io/service: apisix-admin
    app.kubernetes.io/version: 2.13.0
    helm.sh/chart: apisix-0.9.0
  annotations:
    meta.helm.sh/release-name: apisix
    meta.helm.sh/release-namespace: ingress-apisix
spec:
  type: ClusterIP
  ports:
  - name: admin
    port: 9180
    targetPort: 9180
    protocol: TCP
  selector:
    app.kubernetes.io/instance: apisix
    app.kubernetes.io/name: apisix
  clusterIP: None
